<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- required tags -->
  <name>my_ament_example</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>
  
  <!-- optional tags -->
  <url>TODO: URL</url>
  <author>TODO: Author</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>hello</build_depend>
  <build_depend>world</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
